--- a/src/static/styles/styles.scss
+++ b/src/static/styles/styles.scss
@@ -40,5 +40,6 @@ body {
   --background-color: #f4f5f9;
 }
 * {
+  scrollbar-width: none;
   box-sizing: border-box; /* Учитываем отступы и границы в размерах */
 }
