--- a/src/static/styles/styles.scss
+++ b/src/static/styles/styles.scss
@@ -11,6 +11,7 @@ body {
   width: 100vw;
   height: 100vh;
   font-family: 'PTS', sans-serif;
+  overflow: hidden;
 }
 @font-face {
   font-family: 'PTS';
