Добавил плавное появление текста при анимации

--- a/src/components/circle/components/items/ui/styles.scss
+++ b/src/components/circle/components/items/ui/styles.scss
@@ -57,6 +57,7 @@
   margin-left: 76px;
   font-weight: 700;
   color: var(--item-active-text-color);
+  transition: opacity var(--time) ease;
 }
 .item-container.active {
   display: flex;
