--- a/src/components/interactiveYears/ui/styles.scss
+++ b/src/components/interactiveYears/ui/styles.scss
@@ -10,6 +10,9 @@
   font-size: 56px;
   user-select: none;
 }
+.years.mobile {
+  height: 200px;
+}
 .years.desktop {
   font-size: 200px;
   position: absolute;
