--- a/src/pages/home/ui/styles.scss
+++ b/src/pages/home/ui/styles.scss
@@ -1,9 +1,14 @@
 @use '@/static/styles/styles.scss';
 .container {
   text-align: center;
-  max-width: 1200px;
+  width: 100%;
   position: relative;
 }
+.container.mobile {
+  width: 100%;
+  height: 100vh;
+}
+
 .container.desktop {
   max-width: 1440px;
   margin: 170px 320px 0 320px;
@@ -18,29 +23,31 @@
   margin-top: 45px;
 }
 .container-interactive.mobile {
-  margin-top: 104px;
   display: flex;
   flex-direction: column;
 }
 .line {
   width: 280px;
   border: 1px solid var(--gap-line-color);
-  margin-top: 130px;
 }
 
 @media (max-width: 768px) {
   .container {
-    margin-left: 20px;
+    margin-left: 6.25%;
   }
 }
 
 .information-section.mobile {
   display: flex;
   flex-direction: column-reverse;
-  width: 100vw;
+  width: 100%;
 }
 
 .information-section.desktop {
   margin-top: -48px;
   margin-left: 78px;
+}
+
+.swiper {
+  user-select: none;
 }
