--- a/src/static/styles/styles.scss
+++ b/src/static/styles/styles.scss
@@ -20,7 +20,7 @@ body {
   font-style: normal;
 }
 #root {
-  height: 100%;
+  height: 100vh;
   width: 100%;
   display: flex;
   align-items: center;
