--- a/src/pages/home/ui/styles.scss
+++ b/src/pages/home/ui/styles.scss
@@ -5,7 +5,7 @@
   position: relative;
 }
 .container.mobile {
-  width: 100%;
+  width: 93.75%;
   height: 100vh;
 }
 
@@ -31,11 +31,11 @@
   border: 1px solid var(--gap-line-color);
 }
 
-@media (max-width: 768px) {
-  .container {
-    margin-left: 6.25%;
-  }
-}
+// @media (max-width: 768px) {
+//   .container {
+//     margin-left: 6.25%;
+//   }
+// }
 
 .information-section.mobile {
   display: flex;
