--- a/src/components/navigation/components/buttons/ui/styles.scss
+++ b/src/components/navigation/components/buttons/ui/styles.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
+  transition: background-color var(--time) ease;
 }
 .navigation-buttons__button.desktop {
   width: 50px;
