Добавил общую базу. Добавил интерфейс к хендлеру. Разделил на все компоненты

--- a/src/components/circle/components/items/ui/styles.scss
+++ b/src/components/circle/components/items/ui/styles.scss
@@ -72,5 +72,5 @@
   flex-direction: column;
 }
 .item.active {
-  transform: rotate(360deg); /* Вращение при активации */
+  transform: rotate(360deg);
 }
