--- a/src/static/styles/styles.scss
+++ b/src/static/styles/styles.scss
@@ -1,5 +1,4 @@
 body {
-  // font-family: 'Arial', sans-serif;
   background-color: #f5f7fa;
   margin: 0;
   padding: 0;
@@ -47,5 +46,5 @@ body {
 }
 * {
   scrollbar-width: none;
-  box-sizing: border-box; /* Учитываем отступы и границы в размерах */
+  box-sizing: border-box;
 }
