--- a/src/static/styles/styles.scss
+++ b/src/static/styles/styles.scss
@@ -43,6 +43,7 @@ body {
   --event-text-color: #3877ee;
   --mobile-color: #3877ee;
   --background-color: #f4f5f9;
+  --hover-navigation-buttons: #e0e0e0;
 }
 * {
   scrollbar-width: none;
